--- a/Exercicios/010/index.html
+++ b/Exercicios/010/index.html
@@ -1,63 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Jogos </title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Jogos Favoritos</h1>
-    <ul>
-        <li>
-            Nitendo
-            <ol>
-                <li>Mario Bros
-                    <ul>
-                        <li>Mario bros</li>
-                        <li>Mario leves</li>
-                    </ul>
-                </li>
-                <li>Ninja Gaidem
-                    <ul>
-                        <li>Ninja III</li>
-                    </ul>
-                </li>
 
-            </ol>
-        </li>
+    <h1>HiperLinks e Downloads</h1>
 
-        <li>
-            Super Nitendo
-            <ol>
-                <li>Super Mario Word
-                    <ul>
-                        <li>Mario III</li>
-                        <li>Marinho mario</li>
-                    </ul>
-                </li>
-                <li>Dock Kong
-                    <ul>
-                        <li>Doke Kong III</li>
-                        <li>Doke Konge Quest</li>
-                    </ul>
-                </li>
-            </ol>
-        </li>
-        <li>
-            Playst 1
-            <ol>
-                <li>Castle Vania</li>
-                <li>Final Fantaze</li>
-                <li>GTA
-                    <ul>
-                        <li>GTA Sandres</li>
-                        <li>GTA vice cite</li>
-                    </ul>
-                </li>
-            </ol>
-        </li>
-    </ul>
-    
-</body>
+   <p> Esse <a href="https://www.youtube.com/watch?v=BNHR6IQJGZs" hreflang="pt-br" target="_blank" rel="external"> Link</a> vai para um video </p>
+
+
+   <p>Para ir para a proxima página clicando <a href="pagina 2/index2.html" rel="next">aqui</a></p>
+
+   <p>Acesse a página de <a href="dawnloads.html" rel="next" hreflang="pt-br">downloads</a></p>
+</body> 
 </html>
