--- a/Exercicios/011/index.html
+++ b/Exercicios/011/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Midias em HTML5</title>
 </head>
 <body>
+    <h1>Imagem Dinamica</h1>
 
-    <h1>HiperLinks e Downloads</h1>
+    <p>Aqui faremos um texte de imagem dinâmica</p>
 
-   <p> Esse <a href="https://www.youtube.com/watch?v=BNHR6IQJGZs" hreflang="pt-br" target="_blank" rel="external"> Link</a> vai para um video </p>
+    <picture>
+        <source media="(min-width:  1080px)" srcset="img/foto-g.png" type="image/png">
+        <source media="(min-width: 750px)" srcset="img/foto-m.png" type="image/png">
 
 
-   <p>Para ir para a proxima página clicando <a href="pagina 2/index2.html" rel="next">aqui</a></p>
+        <img src="img/foto-p.png" alt="foto pequena" srcset="img/foto-p.png">
+    </picture>
 
-   <p>Acesse a página de <a href="dawnloads.html" rel="next" hreflang="pt-br">downloads</a></p>
-</body> 
+    <br>
+    <br>
+    <h1>Adicionando um audio</h1>
+
+    <p>Logo abaixo você vera um audio sendo possível reproduzilo</p>
+    <audio src="audio/aud.mp3" controls preload="metadata"> 
+
+    </audio>
+
+
+</body>
 </html>
