--- a/Exercicios/016/index.html
+++ b/Exercicios/016/index.html
@@ -24,7 +24,7 @@
         div:hover >p{
             display: inline-block;
             background-color: red;
-        }
+            }
 
         div:hover{
             background-color: yellow;
@@ -35,12 +35,17 @@
             background-color:rebeccapurple;
 
         }
+
+        #d1{
+            box-sizing: border-box;
+            border: 1px solid black;
+        }
     </style>
 
 
 </head>
 <body>
-    <div>1
+    <div id="d1">1
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, autem molestiae ipsa mollitia cum officiis reprehenderit perspiciatis impedit nam eos blanditiis error recusandae molestias ratione provident accusamus iste. Minus, laboriosam.</p>
     </div>
     <div id="d2">2</div>
